MAJ input mobile

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" crossorigin href="style.css" />
   </head>
   <body>
-    <h1>Projet Bodyscult</h1>
+    <h1>Projet Bodysculpt</h1>
     <div class="container">
       <form>
         <input type="text" />
